# 2hal9

./: .dockerignore  .env.example  .gitignore  20250610_HAL9_FACTORY_TOUR_VIDEO.md  2hal9_cleanup.sh  ADHD_CLEANUP_PLAN.md  ARCHITECTURE.md  BUILD_AND_TEST_REPORT.md  BUILD_OPTIMIZATION.md  BUILD_PERFORMANCE_REPORT.md  CAN_I_USE_HAL9.md  CLAUDE.md  COMMIT_FORMAT.md  CONTRIBUTING.md  CORE_ARCHITECTURE.md  CTO_DOCUMENTATION_HIERARCHY_COMPLETE.md  CTO_HIERARCHICAL_COMMITS_SUMMARY.md  Cargo.toml  DATABASE_CONNECTION_POOL_ISSUES.md  DEDUP_DECISION_SUMMARY.md  DELETED_FILES_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_REORG_SUMMARY.md  Dockerfile  Dockerfile.simple  EVOLUTION_GUIDE.md  EXECUTE_GIT_RECOVERY.md  EXTERNAL_DEPS_REMOVAL_REPORT.md  GENIUS_GAME_REFACTORING_PLAN.md  GENIUS_GAME_SUMMARY.md  GIT_RECOVERY_PLAN.md  GRADIENT_CORE_SEPARATION.md  GRAPHQL_API_V2_COMPLETE.md  HAL9_FACTORY_TOUR_PROMPT.md  HAL9_FACTORY_TOUR_VIDEO_20250610.md  HAL9_SERVER_PROCESS_TOUR.md  HAL9_SERVER_PROCESS_TOUR_20250611.md  HA_COMMIT_GUIDE.md  HA_MIGRATION_COMPLETE.md  HIERARCHICAL_REORG_PLAN.md  (+56 more)
2hal9-cli/: Cargo.toml
2hal9-cli/src/: main.rs
2hal9-cli/src/commands/: signal.rs  start.rs  status.rs  stop.rs
2hal9-core/: Cargo.toml
2hal9-core/src/: config.rs  error.rs  lib.rs  neuron.rs  signal.rs
2hal9-core/src/mcp/: mod.rs  tools.rs
2hal9-minimal/: Cargo.toml  README.md
2hal9-minimal/core/hal9-core/: Cargo.toml
2hal9-minimal/core/hal9-core/src/: error.rs  lib.rs  neuron.rs
2hal9-minimal/core/hal9-server/: Cargo.toml  sqlx.toml
2hal9-minimal/core/hal9-server/src/: api.rs  api_auth.rs  cache.rs  claude.rs  database.rs  main.rs  memory_manager.rs  neuron.rs  performance.rs  server.rs  sql_query_macros.rs
2hal9-minimal/games/game_neurons/: BUILD_AND_DEPLOY.md  Cargo.toml
2hal9-minimal/games/game_neurons/src/: lib.rs
2hal9-server/: Cargo.toml
2hal9-server/benches/: performance_benchmark.rs
2hal9-server/src/: api.rs  claude.rs  cost_tracker.rs  lib.rs  main.rs  metrics.rs  neuron.rs  performance.rs  router.rs  server.rs
2hal9-server/src/network/: connection_pool.rs  discovery.rs  protocol.rs  tcp_transport.rs
2hal9-server/src/router/: distributed.rs  local.rs  mod.rs
2hal9-server/tests/: circuit_breaker_tests.rs  cost_tracker_tests.rs  integration_tests.rs
L2_implementation/neurons/agent_dropout/: Cargo.toml
L2_implementation/neurons/agent_dropout/examples/: demo.rs
L2_implementation/neurons/agent_dropout/src/: agent.rs  assessment.rs  dropout.rs  evaluation.rs  lib.rs  network.rs
L2_implementation/neurons/game_neurons/: Cargo.toml  nethack_pal9.rs
L2_implementation/neurons/game_neurons/src/: game.rs  lib.rs  main.rs
L8_visionary/exploration/gentle_singularity/: Cargo.toml  README.md
L8_visionary/exploration/gentle_singularity/src/: lib.rs  tracker.rs  visualization.rs
L8_visionary/exploration/gentle_singularity/static/: index.html
competitions/genius_game_server/: .dockerignore  Cargo.toml  README.md  test_local_models.sh
competitions/genius_game_server/demo/: README.md
competitions/genius_game_server/src/: analytics.rs  lib.rs  main.rs  server.rs  streaming.rs
competitions/genius_game_server/src/ai_providers/: bedrock.rs  ollama.rs
competitions/genius_game_server/src/collective/: mod.rs  tests.rs
competitions/genius_game_server/src/games/: battle_royale.rs  byzantine_generals.rs  collective_maze.rs  core_logic_tests.rs  death_game_tests.rs  hunger_games.rs  king_of_the_hill.rs  last_stand.rs  liars_dice.rs  mini_go.rs  mini_holdem.rs  minority_game.rs  mod.rs  prisoners_dilemma.rs  quantum_consensus.rs  recursive_reasoning.rs  russian_roulette.rs  squid_game.rs  swarm_optimization.rs  tests.rs  trust_fall.rs
competitions/genius_game_server/src/sota/: enhanced.rs  mod.rs  tests.rs
competitions/genius_game_server/tests/: e2e_tests.rs  integration_tests.rs  unit_tests.rs
demo/ai-genius-game/: Cargo.toml  test-auth-web.js  test-auth.sh
demo/ai-genius-game/src/: auth.rs  index.html  main.rs  user_store.rs
demo/ai-genius-game/static/: index.html
hal9-cli/: Cargo.toml
hal9-cli/src/: main.rs
hal9-cli/src/commands/: start.rs  status.rs
hal9-codegen/: Cargo.toml
hal9-codegen/src/: api.rs
hal9-core/: Cargo.toml
hal9-core/benches/: hierarchical_performance_benchmark.rs
hal9-core/src/: config.rs  error.rs  lib.rs
hal9-core/src/auth/: jwt.rs  user.rs
hal9-core/src/hierarchical/: interfaces.rs
hal9-core/src/learning/: gradient.rs
hal9-core/src/mcp/: tools.rs
hal9-core/src/memory/: sqlite.rs
hal9-core/src/migration/: monitoring.rs  router.rs
hal9-core/tests/: hierarchical_basic_test.rs  hierarchical_integration_basic.rs  hierarchical_integration_test.rs  intelligence_layer_test.rs
hal9-migrate/: Cargo.toml  README.md
hal9-migrate/src/: dashboard.html  main.rs
hal9-migrate/src/commands/: pre_check.rs  status.rs
hal9-plugin-sdk/: Cargo.toml
hal9-plugin-sdk/src/: lib.rs
hal9-server/: Cargo.toml  sqlx.toml
hal9-server/src/: api.rs  auth_middleware.rs  cache.rs  claude.rs  database.rs  lib.rs  metrics.rs
hal9-server/src/blockchain/: mod.rs  proof.rs  tests.rs
hal9-server/src/enterprise/: mod.rs  organization.rs  rbac.rs  team.rs  tests.rs
hal9-server/src/network/: connection_pool.rs
hal9-server/src/plugins/: manager.rs  mod.rs  registry.rs  tests.rs
hal9-server/src/scaling/: mod.rs  session_manager.rs
hal9-server/tests/: circuit_breaker_tests.rs
mvp/: Cargo.toml  DEMO_ENHANCEMENTS.md  EXPORT_GUIDE.md  README.md  RECORDING_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS.md  ULTRATHINK_RECORDING_SUMMARY.md  ULTRATHINK_SUMMARY.md  ULTRATHINK_TEST_SUMMARY.md  WEB_UI_GUIDE.md  demo.sh  export-demo.sh  record-demo.sh  replay-demo.sh  run-composition-tests.sh  run-mvp.sh  run-tests.sh  run-web.sh
mvp/mvp/recordings/: demo_create_a_task_management_web_application_20250607_145747.json
mvp/recordings/: README.md
mvp/src/: lib.rs  main.rs  recorder.rs  web.rs
mvp/static/: index.html
mvp/tests/: integration_tests.rs  task_composition_tests.rs
plugins/examples/sentiment-analyzer/: Cargo.toml  manifest.json
(+1370 files in other folders)
