[workspace]
members = [
    "2hal9-core",
    "2hal9-server", 
    "2hal9-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["2HAL9 Team"]
license = "MIT"
repository = "https://github.com/2lab-ai/2hal9"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = { version = "0.14", features = ["yaml"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json"] }

# Other
async-trait = "0.1"
once_cell = "1.19"