[workspace]
members = [
    "hal9-core",
    "hal9-server", 
    "hal9-cli",
    "hal9-codegen",
    "hal9-browser",
    "mvp"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HAL9 Team"]
license = "MIT"
repository = "https://github.com/2lab-ai/hal9"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = { version = "0.14", features = ["yaml"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json"] }

# Other
async-trait = "0.1"
once_cell = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
base64 = "0.22"
rand = "0.8"