[package]
name = "2hal9-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "2hal9"
path = "src/main.rs"

[dependencies]
# Core crates
2hal9-core = { path = "../2hal9-core" }
2hal9-server = { path = "../2hal9-server" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Terminal UI
colored = "2.1"
indicatif = "0.17"