[workspace]
members = [
    "core/hal9-core",
    "core/hal9-server",
    "core/hal9-cli",
    "games/game_neurons",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HAL9 Team"]
license = "MIT"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Common types
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# API
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"

# Additional dependencies
once_cell = "1.19"
config = "0.13"
bb8 = "0.8"
bb8-redis = "0.13"
prometheus = "0.13"
metrics = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true