[package]
name = "hal9-codegen"
version = "0.1.0"
edition = "2021"
authors = ["HAL9 Team"]
description = "HAL9 Code Generation CLI Tool"
license = "MIT"

[[bin]]
name = "hal9-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.0"