[package]
name = "hal9-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Terminal UI
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.0"
comfy-table = "7.0"
crossterm = "0.27"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
# Random for mock data
rand = "0.8"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# HAL9 dependencies
hal9_core = { path = "../hal9-core" }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"