[package]
name = "hal9-plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["HAL9 Team"]
license = "MIT"
description = "SDK for developing HAL9 plugins"
repository = "https://github.com/2lab/hal9"
homepage = "https://hal9.ai"
documentation = "https://docs.hal9.ai/plugins"
keywords = ["hal9", "plugin", "wasm", "ai", "sdk"]
categories = ["wasm", "api-bindings", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }