[package]
name = "hal9_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hal9-server"
path = "src/main.rs"

[dependencies]
# Core types
hal9_core = { path = "../hal9-core" }
hal9_browser = { path = "../hal9-browser", optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
parking_lot = "0.12"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# HTTP client for Claude API
reqwest = { workspace = true }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors"] }

# Testing
mockall = { workspace = true }

# System info
sys-info = "0.9"

# Low-level system calls
libc = "0.2"

# Database
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "performance_benchmark"
harness = false

[features]
default = []
browser = ["hal9_browser"]