[package]
name = "genius_game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
rand = "0.8"
futures = "0.3"
colored = "2"

# AI Integration
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.18"
# AWS Bedrock support
aws-config = "1.1"
aws-sdk-bedrockruntime = "1.13"
# Local model support
ollama-rs = "0.1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "demo_ollama"
path = "src/bin/demo_ollama.rs"

[[bin]]
name = "death_game_demo"
path = "src/bin/death_game_demo.rs"

[[bin]]
name = "death_game_ultimate_demo"
path = "src/bin/death_game_ultimate_demo.rs"