[package]
name = "ai-genius-game"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Authentication dependencies
jsonwebtoken = "9.2"
bcrypt = "0.15"
once_cell = "1.19"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

[workspace]