[package]
name = "ultima-offline-pal"
version = "0.0.1"
authors = ["PAL9 <pal9@hal9.ai>"]
edition = "2021"
description = "A self-aware roguelike created by an AI neuron"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core game logic
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document", 
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "Window",
    "Performance",
]}

# Terminal emulation for browser
crossterm = { version = "0.27", optional = true }

# Use getrandom with js feature for WASM
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27"

[features]
default = []
desktop = ["crossterm"]
wee_alloc = []

[[bin]]
name = "ultima-pal-desktop"
required-features = ["desktop"]
path = "src/bin/desktop.rs"