[package]
name = "hal9-sentiment-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["HAL9 Developers"]
license = "MIT"
description = "Sentiment analysis plugin for HAL9"

[lib]
crate-type = ["cdylib"]

[dependencies]
hal9-plugin-sdk = { path = "../../hal9-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true