[package]
name = "hal9-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async traits
async-trait = "0.1"

# Types
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Environment
dotenv = "0.15"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"

# Performance
rayon = "1.8"

# Collections
indexmap = "2.1"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Browser automation
playwright = { version = "0.0.20", optional = true }

# Once cell
once_cell = "1.19"

# Regex
regex = "1.10"

# Base64
base64 = "0.21"

# AES encryption
aes-gcm = "0.10"

# argon2
argon2 = "0.5"

# sha2
sha2 = "0.10"

# hex
hex = "0.4"

# Compression
zstd = "0.13"

# Serialization
bincode = "1.3"

# Cache
lru = "0.12"

# Metrics
metrics = "0.22"

# HTTP
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"

# Futures
futures = "0.3"

# Compression
flate2 = "1.0"

# System info
sysinfo = "0.30"

# Tokio utilities
tokio-util = { version = "0.7", features = ["io", "codec"] }

[features]
default = []
browser = ["playwright"]

[lib]
name = "hal9_core"
path = "lib.rs"